Attempt to fix too small footer on mobile

--- a/css/xal.css
+++ b/css/xal.css
@@ -64,6 +64,7 @@ IMG.small-display {
       margin-right: -20px;
       padding-left: 20px;
       padding-right: 20px;
+      height: 90px;
    }
 
    IMG.displayed {
